@@ -701,7 +701,7 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.3.2</version>
+					<version>3.6.1</version>
 					<configuration>
 						<source>1.7</source>
 						<target>1.7</target>
@@ -747,7 +747,7 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.5</version>
+					<version>2.20.1</version>
 				</plugin>
 				<plugin>   
 					<groupId>org.apache.felix</groupId>
@@ -756,7 +756,7 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-surefire-report-plugin</artifactId>
-					<version>2.8</version>
+					<version>2.20.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -779,7 +779,7 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.9.1</version>
+					<version>3.0.0-M1</version>
 					<configuration>
 						<!-- Java 8 is too strict about Javadoc omissions --> 
 						<additionalparam>${javadoc.doclint.none}</additionalparam>
@@ -803,7 +803,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>2.17</version>
+                    <version>2.20.1</version>
                     <executions>
                         <execution>
                             <id>integration-test</id>
@@ -1600,7 +1600,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.8</version>
+                <version>2.20.1</version>
             </plugin>
         </plugins>
     </reporting>
