@@ -13,6 +13,7 @@ Date:
 ----------------------------------
 Bug Fixes:
 
+CAY-2253 Cayenne JDK9 compatibility
 CAY-2361 PostgreSQL DbGenerator issues
 CAY-2364 Wrong logging in SQLTemplate
 CAY-2365 SQLExec query tries to convert (unexpected) result set into objects
